#
#   yosys -- Yosys Open SYnthesis Suite
#
#   Copyright (C) 2017  Sebastian Wallat <sebastian.wallat@rub.de>
#
#   Permission to use, copy, modify, and/or distribute this software for any
#   purpose with or without fee is hereby granted, provided that the above
#   copyright notice and this permission notice appear in all copies.
#
#   THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
#   WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
#   MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
#   ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
#   WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
#   ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
#   OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

set(SOURCE_FILES ${SOURCE_FILES}
    ${CMAKE_CURRENT_LIST_DIR}/techmap.cc
    ${CMAKE_CURRENT_LIST_DIR}/simplemap.cc
    ${CMAKE_CURRENT_LIST_DIR}/dfflibmap.cc
    ${CMAKE_CURRENT_LIST_DIR}/maccmap.cc
    ${CMAKE_CURRENT_LIST_DIR}/libparse.cc
    )

if(ENABLE_ABC)
    set(SOURCE_FILES ${SOURCE_FILES}
        ${CMAKE_CURRENT_LIST_DIR}/abc.cc
        )
    if(ABCEXTERNAL)
        add_definitions(-DABCEXTERNAL='${ABCEXTERNAL}')
    endif(ABCEXTERNAL)
endif(ENABLE_ABC)

if(NOT SMALL)
    set(SOURCE_FILES ${SOURCE_FILES}
        ${CMAKE_CURRENT_LIST_DIR}/iopadmap.cc
        ${CMAKE_CURRENT_LIST_DIR}/hilomap.cc
        ${CMAKE_CURRENT_LIST_DIR}/extract.cc
        ${CMAKE_CURRENT_LIST_DIR}/alumacc.cc
        ${CMAKE_CURRENT_LIST_DIR}/dff2dffe.cc
        ${CMAKE_CURRENT_LIST_DIR}/dffinit.cc
        ${CMAKE_CURRENT_LIST_DIR}/pmuxtree.cc
        ${CMAKE_CURRENT_LIST_DIR}/muxcover.cc
        ${CMAKE_CURRENT_LIST_DIR}/aigmap.cc
        ${CMAKE_CURRENT_LIST_DIR}/tribuf.cc
        ${CMAKE_CURRENT_LIST_DIR}/lut2mux.cc
        ${CMAKE_CURRENT_LIST_DIR}/nlutmap.cc
        ${CMAKE_CURRENT_LIST_DIR}/dffsr2dff.cc
        ${CMAKE_CURRENT_LIST_DIR}/shregmap.cc
        ${CMAKE_CURRENT_LIST_DIR}/deminout.cc
        ${CMAKE_CURRENT_LIST_DIR}/insbuf.cc
        ${CMAKE_CURRENT_LIST_DIR}/attrmvcp.cc
        ${CMAKE_CURRENT_LIST_DIR}/attrmap.cc
        ${CMAKE_CURRENT_LIST_DIR}/zinit.cc
        )
endif(NOT SMALL)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/)
add_custom_command(
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        COMMAND echo "// autogenerated from passes/techmap/techmap.v" > ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        COMMAND echo "static char stdcells_code[] = {" >> ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        COMMAND od -v -td1 -An ${CMAKE_CURRENT_LIST_DIR}/../../techlibs/common/techmap.v | sed -e 's/[0-9][0-9]*/&,/g' >> ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        COMMAND echo "0}\;" >> ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        DEPENDS ${CMAKE_CURRENT_LIST_DIR}/../../techlibs/common/techmap.v
        BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
        COMMENT "Generating passes/techmap/techmap.inc"
)

set(SOURCE_FILES ${SOURCE_FILES}
    ${CMAKE_CURRENT_BINARY_DIR}/passes/techmap/techmap.inc
    )

if(NOT BUILD_EMSCRIPTEN)
    add_executable(${PROJECT_NAME}-filterlib  ${CMAKE_CURRENT_LIST_DIR}/filterlib.cc)
    install(TARGETS ${PROJECT_NAME}-filterlib RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif(NOT BUILD_EMSCRIPTEN)